--- a/index.html
+++ b/index.html
@@ -5,10 +5,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300&display=swap" rel="stylesheet">
+    <title>Portfolio</title>
 </head>
 
 <body>
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome to </h1>
+            <h1>Developer <span>world</span></h1>
+            <h2>How to build website</h2>
+            <p>My name is Riyadh Talukder! I've been doing web development since 2018. I have worked with many small and large companies across the USA, Canada, Australia, UK, and Asia, including some of the International brands.</p>
+            <a class="link-button" href="#" target="_blank">HIRE ME</a>
+        </div>
+        <div class="half-width">
+
+
+            <img src="./my-bg.png" alt="">
+
+        </div>
+    </section>
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="./my-bg.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream big</h1>
+            <h2>Become a web developer</h3>
+                <p>My name is Riyadh Talukder! I've been doing web development since 2018. I have worked with many small and large companies across the USA, Canada, Australia, UK, and Asia, including some of the International brands.</p>
+                <a class="link-button" href="#" target="_blank">DOWNLOAD CV</a>
+
+        </div>
+    </section>
 
 </body>
 
