--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width">
             <h1>Welcome to </h1>
             <h1>Developer <span>world</span></h1>
@@ -28,7 +28,7 @@
 
         </div>
     </section>
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
         <div class="half-width">
             <img src="./my-bg.png" alt="">
         </div>
@@ -40,6 +40,30 @@
 
         </div>
     </section>
+    <section class="experince-area">
+        <h1>Experinces</h1>
+        <div class="flexible-container">
+            <div class="half-width-box">
+                <h1>Full stack developer</h1>
+                <h2>2020-present | pro level developer</h2>
+                <p>My name is Riyadh Talukder! I've been doing web development since 2018. I have worked with many small and large companies across the USA, Canada, Australia, UK, and Asia, including some of the International brands.My name is Riyadh Talukder!
+                    I've been doing web development since 2018. I have worked with many small and large companies across the USA, Canada, Australia, UK, and Asia, including some of the International brands.</p>
+
+            </div>
+            <div class="half-width-box">
+                <h1>Baby web developer</h1>
+                <h2>2018-2020 | Baby web developer </h2>
+                <p>My name is Riyadh Talukder! I've been doing web development since 2018. I have worked with many small and large companies across the USA, Canada, Australia, UK, and Asia, including some of the International brands.My name is Riyadh Talukder!
+                    I've been doing web development since 2018. I have worked with many small and large companies across the USA, Canada, Australia, UK, and Asia, including some of the International brands.</p>
+
+            </div>
+        </div>
+
+
+    </section>
+    <footer id="footer">
+        <p>My name is Riyadh Talukder! I've been doing web development since 2018.</p>
+    </footer>
 
 </body>
 
