--- a/mission/index.html
+++ b/mission/index.html
@@ -88,7 +88,7 @@
     <section class="sec4">
         <footer>
             <h2 class="fh2">Mission 2022</h2>
-            <p class="fp"><small> Hard work, Perseverance, and Determination for 2022</small></p>
+            <p class="fp"><small> Hard work, Perseverance, and Determination for 2022 | Riyadh Talukder</small></p>
         </footer>
     </section>
 </body>
